# QLSAs

./: .gitignore  Generate_Problem_2.py  HHL-IR-2x2.ipynb  HHL-IR-4x4.ipynb  HHL_Circuit.py  Iterative_Refinement.py  LICENSE  Quantum_Linear_Solver.py  Quantum_Linear_Solver_2.py  README.md  Residuals_plots.ipynb  pyproject.toml  requirements.txt  save_nexus_account.ipynb  save_qiskit_account.ipynb  setup.cfg
.github/workflows/: ci.yml
.ipynb_checkpoints/: HHL-IR-2x2-checkpoint.ipynb  HHL-IR-4x4-checkpoint.ipynb  HHL-IR-8x8-checkpoint.ipynb  Quantum_Linear_Solver-checkpoint.py  README-checkpoint.md  requirements-checkpoint.txt
algorithms/: README.md
circuits/: README.md
circuits/hhl/: cudaq_hhl_circuit.py  qiskit_hhl_circuit.py
data/: 32var_cond_sweep_cache_20260303_235939.npz  32var_cond_sweep_cache_20260304_154332.npz  8var_cond_sweep_cache_20260407_201250.npz  Generate_results.py  README.md  direct_hhl_depth_calibration_n8.npz  sensitivity_analysis.pkl
data/problem_instances/: generators.py
data/solutions/: error_mitigated_refined_solution.pkl  refined_solution.pkl
docs/: architecture.md  eigenvalue_inversion.md  hrf_readout.md
examples/: HHL-IR-8x8.ipynb  README.md  cond_sweep_animation.ipynb  cudaq-demo.ipynb  demo.ipynb  eigenvalue_inversion_comparison.ipynb  experiments.ipynb  hhl_resource_estimation.ipynb  ibm_demo.ipynb  oracle_comparison.ipynb  oracle_sweep_4x4.ipynb  problem_generation_testing.ipynb  qipm.ipynb  quantinuum_demo.ipynb  sensitivity_analysis.ipynb
iterative_refinement/: README.md  iterative_refinement.py  norm_estimation.py  sign_estimation.py
linear_systems_problems/: README.md  random_matrix_generator_v0.py  random_matrix_generator_v2.py  random_matrix_generator_v3.py
qipm/: ParametersDefault.py  generator.py  qipm-demo.ipynb  qipm-demo_real.ipynb  qipm-demo_sim.ipynb  qipmdev.py
qiskit/: Residuals_plots.ipynb
qiskit/problems/: problem_2x2_10_A.npy  problem_2x2_10_b.npy  problem_2x2_11_A.npy  problem_2x2_11_b.npy  problem_2x2_15_b.npy  problem_2x2_16_b.npy  problem_2x2_17_A.npy  problem_2x2_17_b.npy  problem_2x2_1_b.npy  problem_2x2_21_A.npy  problem_2x2_21_b.npy  problem_2x2_22_A.npy  problem_2x2_24_A.npy  problem_2x2_25_A.npy  problem_2x2_3_b.npy  problem_2x2_4_b.npy  problem_2x2_5_b.npy  problem_2x2_6_A.npy  problem_2x2_6_b.npy  problem_2x2_7_A.npy  problem_2x2_8_b.npy  problem_2x2_9_b.npy  problem_4x4_10_A.npy  problem_4x4_11_A.npy  problem_4x4_12_b.npy  problem_4x4_13_b.npy  problem_4x4_14_A.npy  problem_4x4_14_b.npy  problem_4x4_15_A.npy  problem_4x4_18_A.npy  problem_4x4_18_b.npy  problem_4x4_19_A.npy  problem_4x4_21_A.npy  problem_4x4_21_b.npy  problem_4x4_22_b.npy  problem_4x4_23_A.npy  problem_4x4_24_A.npy  problem_4x4_25_b.npy  problem_4x4_2_A.npy  problem_4x4_2_b.npy  (+32 more)
qiskit_workflow/problems/: problem_2x2_12_A.npy  problem_2x2_12_b.npy  problem_2x2_13_b.npy  problem_2x2_14_b.npy  problem_2x2_16_A.npy  problem_2x2_18_b.npy  problem_2x2_19_b.npy  problem_2x2_1_A.npy  problem_2x2_20_b.npy  problem_2x2_22_b.npy  problem_2x2_23_b.npy  problem_2x2_2_A.npy  (+56 more)
qnexus/: DATASET_DISTRIBUTION_SUMMARY.md  Dataset_Generator.py  Generate_Problem.py  Generate_Problem_V2.py  Generate_Problem_V3.py  HHL_Circuit.py  HHL_Circuit_Old.py  HHL_Problem_Dataset.py  Iterative_Refinement.py  Quantum_Linear_Solver.py  README.md  config.py  plot_compare.py  run_hhl_dataset_analysis.py  run_hhl_ir.py  run_hhl_ir_qpe_sweep.py  run_hhl_ir_shots_sweep.py  test_qnx_login.py
qnexus_workflow/: Iterative_Refinement.py  Quantum_Linear_Solver.py  README.md  plot_interrupted_data.py  run_hhl_dataset_analysis.py  run_hhl_ir_qpe_sweep.py
solvers/: README.md  __init__.py  hhl_solver.py  qiskit_hhl_solver.py  solver.py
tests/: conftest.py  test_architecture_refactor.py  test_backend_protocol.py  test_cudaq_backend.py  test_data_loader.py  test_executer.py  test_guppy_runner.py  test_hhl.py  test_hhl_helpers.py  test_hrf_readout.py  test_post_processor.py  test_refiner.py  test_selene.py  test_solver.py  test_state_prep.py  test_transpiler.py
(+4097 files in other folders)
