[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlsas"
version = "0.1.0"
description = "A toolkit for running Quantum Linear Systems Algorithms (QLSAs) on quantum hardware"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.26",
  "pandas==2.2.3",
  "matplotlib==3.9.2",
  "qiskit>=2.0",
  "qiskit-aer>=0.17",
  "qiskit-ibm-runtime>=0.45",
  "pylatexenc==2.10.0",
  "pytket>=2.3.2",
  "pytket-qiskit>=0.67",
  "qnexus>=0.15.0",
  "guppylang>=0.21",
  "selene-sim>=0.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "hardware: marks tests that require real IBM or Quantinuum backends; skipped unless explicitly enabled",
]
