[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlsas"
version = "0.1.0"
description = "A toolkit for running Quantum Linear Systems Algorithms (QLSAs) on quantum hardware"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.26",
  "pandas==2.2.3",
  "matplotlib==3.9.2",
  "qiskit>=2.0",
  "qiskit-aer>=0.17",
  "qiskit-ibm-runtime>=0.45",
  "pylatexenc==2.10.0",
  "pytket>=2.3.2",
  "pytket-qiskit>=0.67",
  "qnexus>=0.15.0",
  "guppylang>=0.21",
  "selene-sim>=0.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
hrf = [
  "hadamard-random-forest @ git+https://github.com/comp-physics/Quantum-HRF-Tomography.git",
  "treelib>=1.7.0",
  "mthree==3.0.0",
]
# CUDA-Q is officially supported only on Linux (x86_64 / aarch64) with a CUDA-
# capable GPU.  The qpp-cpu target works without a GPU, useful for parity tests.
# Install with:  pip install -e .[cudaq]
cudaq = ["cuda-quantum>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "hardware: marks tests that require real IBM or Quantinuum backends; skipped unless explicitly enabled",
  "cudaq: marks tests that require CUDA-Q (cuda-quantum); skipped unless cudaq is importable",
]
